lab-revision-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  annotations:
    kubernetes.io/change-cause: "First Deployment"
spec:
  replicas: 2
  selector:
    matchLabels:
      env: dev
  template:
    metadata:
      name: nginx-pod
      labels:
        env: dev
    spec:
      containers:
        - name: nginx-container
          image: nginx:latest
          ports:
            - containerPort: 80
