lab-revision-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    env: dev
spec:
  selector:
      env: dev
  ports:
    - port: 8082
      targetPort: 80
